infrastructure/03-apps/notifications/manifests/oauth2-proxy/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ntfy-oauth2-proxy-auth
  namespace: notifications
spec:
  forwardAuth:
    # On pointe vers la racine pour laisser oauth2-proxy gérer le flux de redirection
    address: http://ntfy-oauth2-proxy.notifications.svc.cluster.local/
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-User
      - X-Auth-Request-Email
      - X-Auth-Request-Access-Token
      - Authorization
