infrastructure/03-apps/notifications/manifests/oauth2-proxy/policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: ntfy-oauth2-proxy-security
  namespace: notifications
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: oauth2-proxy
  ingress:
    - fromEndpoints:
        - matchLabels:
            "io.kubernetes.pod.namespace": traefik
      toPorts:
        - ports:
            - port: "4180"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            "io.kubernetes.pod.namespace": kube-system
            "k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - kube-apiserver
    - toEndpoints:
        - matchLabels:
            "io.kubernetes.pod.namespace": vault
      toPorts:
        - ports:
            - port: "8200"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
